fix: added leading zeros improve readability

--- a/zc_main/styles/Sidebar.module.css
+++ b/zc_main/styles/Sidebar.module.css
@@ -60,7 +60,7 @@
 }
 
 .channelsContainer {
-  margin-top: .5em;
+  margin-top: 0.5em;
 }
 
 .channelHeader {
@@ -104,7 +104,7 @@
 }
 
 .messagesContainer {
-  margin-top: .5em;
+  margin-top: 0.5em;
 }
 
 .messageHeader {
@@ -148,7 +148,7 @@
 }
 
 .messagesContainer {
-  margin-top: .5em;
+  margin-top: 0.5em;
 }
 
 .messageHeader {
